feature: Added kafka to the app. Complete app

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,11 +9,16 @@
     "build": "tsc -p ."
   },
   "devDependencies": {
+    "@types/node": "^20.11.24",
+    "prisma": "^5.10.2",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "ioredis": "^5.3.2",
+    "kafkajs": "^2.2.4",
     "socket.io": "^4.7.4"
   }
 }
